Fix stream breaking up, fix blocking of JupyterLab load on repository fetch (#14)
* Fix progress bar not showing progress:

- after refreshing browser
- when multiple tabs are open
- for initial 0.5s in worst case (now 0.1s)

* Fix blocking on start, locking of git

also fix the state not being fully reflected after refresh

* Fix compatibility with older Python

--- a/style/base.css
+++ b/style/base.css
@@ -68,3 +68,13 @@
 .jp-Exhibit-buttons .jp-Button:disabled {
   opacity: 0.3;
 }
+
+.jp-Exhibit-buttons .jp-spinningIcon > svg {
+  animation: jp-waiting-spin 3s linear infinite;
+}
+
+@keyframes jp-waiting-spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
